--- a/css/style.css
+++ b/css/style.css
@@ -184,20 +184,8 @@ h2 {
               width: 50%; }
 
 .first-screen {
-  background: url("../images/wave1.png") no-repeat center;
-  background-size: cover;
-  width: 100%;
-  position: relative;
-  z-index: 0; }
-  .first-screen:after {
-    content: "";
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    background: url("../images/wave2.png") no-repeat center;
-    background-size: cover;
-    z-index: -1; }
+  background: url("../images/wave.png") no-repeat bottom;
+  background-size: cover; }
   .first-screen .bg {
     background: #648cff;
     width: 100%;
@@ -288,18 +276,7 @@ h2 {
                 transition: 200ms; }
   .first-screen .main-content {
     display: flex;
-    justify-content: space-between;
-    position: relative; }
-    .first-screen .main-content:before {
-      content: "";
-      position: absolute;
-      background: url("../images/wave1.png") no-repeat center; }
-    .first-screen .main-content:after {
-      content: "";
-      position: absolute;
-      background: url("../images/wave2.png") no-repeat center;
-      bottom: 0;
-      left: 0; }
+    justify-content: space-between; }
     @media all and (max-width: 650px) {
       .first-screen .main-content {
         flex-direction: column;
@@ -320,6 +297,9 @@ h2 {
           margin: 0;
           height: 30%;
           padding-top: 30px; } }
+      @media all and (min-width: 1141px) and (max-height: 650px) {
+        .first-screen .main-content .main-content__info {
+          margin-bottom: 100px; } }
       .first-screen .main-content .main-content__info .contener1 {
         width: 100%; }
         @media all and (max-width: 550px) {
@@ -410,7 +390,7 @@ h2 {
         background: url("../images/phone first screen.png") no-repeat center;
         background-size: contain;
         max-height: 631px;
-        height: 100%; }
+        height: 90%; }
         @media all and (min-width: 1250px) {
           .first-screen .main-content .main-content__phone .img {
             position: relative;
