--- a/scss/style.scss
+++ b/scss/style.scss
@@ -242,22 +242,8 @@ h2 {
 
 
 .first-screen {
-
-  background: url("../images/wave1.png") no-repeat center;
+  background: url("../images/wave.png") no-repeat bottom;
   background-size: cover;
-  width: 100%;
-  position: relative;
-  z-index: 0;
-  &:after {
-    content: "";
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    background: url("../images/wave2.png") no-repeat center;
-    background-size: cover;
-    z-index: -1;
-  }
   .bg {
     background: #648cff;
     width: 100%;
@@ -361,23 +347,6 @@ h2 {
   .main-content {
     display: flex;
     justify-content: space-between;
-    //height: calc(100% - 102px); better to use JS because 102px can change
-    position: relative;
-    &:before {
-      content: "";
-      position: absolute;
-      background: url("../images/wave1.png") no-repeat center;
-    }
-    &:after {
-      content: "";
-      position: absolute;
-      background: url("../images/wave2.png") no-repeat center;
-      bottom: 0;
-      left: 0;
-    }
-    // @media all and (max-width: 790px) {
-    //   margin-top: -40px;
-    // }
     @media all and (max-width: 650px) {
       flex-direction: column;
       margin: 0;
@@ -386,7 +355,7 @@ h2 {
     .main-content__info {
       width: 45%;
       margin-bottom: 142px;
-      @media all and (max-width:1140px) {
+      @media all and (max-width: 1140px) {
         margin-bottom: 90px;
       }
       @media all and (max-width: 790px) {
@@ -397,6 +366,9 @@ h2 {
         margin: 0;
         height: 30%;
         padding-top: 30px;
+      }
+      @media all and (min-width: 1141px) and (max-height: 650px) {
+        margin-bottom: 100px;
       }
       // @media all and (max-height: 600px) {
       //   margin-bottom: 70px;
@@ -518,7 +490,7 @@ h2 {
         background: url("../images/phone first screen.png") no-repeat center;
         background-size: contain;
         max-height: 631px;
-        height: 100%;
+        height: 90%;
         @media all and (min-width: 1250px) {
           position: relative;
           right: 30px;
