--- a/scss/style.scss
+++ b/scss/style.scss
@@ -311,31 +311,31 @@ h2 {
         li {
           font-size: 0;
           a {
-              background: url("../images/facebook.png") no-repeat center;
+              background: url("../images/social/facebook.png") no-repeat center;
               display: inline-block;
               height: 26px;
               width: 12px;
               transition: 200ms;
               &:hover {
-                background: url("../images/facebook2.png") no-repeat center;
+                background: url("../images/social/facebook2.png") no-repeat center;
                 transition: 200ms;
               }
               &.header__social--instagram {
-                background: url("../images/instagram.png") no-repeat center;
+                background: url("../images/social/instagram.png") no-repeat center;
                 width: 26px;
                 transition: 200ms;
                 &:hover {
-                  background: url("../images/instagram2.png") no-repeat center;
+                  background: url("../images/social/instagram2.png") no-repeat center;
                   transition: 200ms;
                 }
               }
               &.header__social--tweeter {
-                background: url("../images/twitter.png") no-repeat center;
+                background: url("../images/social/twitter.png") no-repeat center;
                 height: 21px;
                 width: 27px;
                 transition: 200ms;
                 &:hover {
-                  background: url("../images/twitter2.png") no-repeat center;
+                  background: url("../images/social/twitter2.png") no-repeat center;
                   transition: 200ms;
                 }
               }
@@ -487,7 +487,7 @@ h2 {
       //   height: 90%;
       // }
       .img {
-        background: url("../images/phone first screen.png") no-repeat center;
+        background: url("../images/Phones/phone first screen.png") no-repeat center;
         background-size: contain;
         max-height: 631px;
         height: 90%;
@@ -596,19 +596,19 @@ h2 {
         }
         &.boxes__item--first {
           .item__img {
-            background: url("../images/Usability.png") no-repeat center;
+            background: url("../images/Perfect features/Usability.png") no-repeat center;
             background-size: contain;
           }
         }
         &.boxes__item--second {
           .item__img {
-            background: url("../images/Parallax.png") no-repeat center;
+            background: url("../images/Perfect features/Parallax.png") no-repeat center;
             background-size: contain;
           }
         }
         &.boxes__item--third {
           .item__img {
-            background: url("../images/Colors.png") no-repeat center;
+            background: url("../images/Perfect features/Colors.png") no-repeat center;
             background-size: contain;
           }
         }
@@ -717,7 +717,7 @@ h2 {
           height: 300px;
         }
         .phone__img {
-          background: url("../images/test1.png") no-repeat center;
+          background: url("../images/Phones/phone circles text cloudy.png") no-repeat center;
           width: 100%;
           height: 100%;
           background-size: contain;
@@ -835,7 +835,7 @@ h2 {
         }
         .phone {
           .phone__img {
-            background: url("../images/test2.png") no-repeat center;
+            background: url("../images/Phones/phone circles text sunny.png") no-repeat center;
             background-size: contain;
           }
         }
@@ -864,7 +864,7 @@ h2 {
       &.bigBox--third {
         .phone {
           .phone__img {
-            background: url("../images/test3.png") no-repeat center;
+            background: url("../images/Phones/phone circles text rainy.png") no-repeat center;
             background-size: contain;
           }
         }
@@ -1021,7 +1021,7 @@ h2 {
   flex-direction: column;
   justify-content: space-around;
   background-color: #648cff;
-  background-image: url("../images/phoneMIDDLE.png"), url("../images/phoneLEFT.png"), url("../images/phoneRIGHT.png");
+  background-image: url("../images/Phones/phoneMIDDLE.png"), url("../images/Phones/phoneLEFT.png"), url("../images/Phones/phoneRIGHT.png");
   background-position: 73% 200px, 60% 270px, 86% 270px;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -1099,7 +1099,7 @@ h2 {
         // }
       }
       .download__buttons--apple {
-        background: url("../images/appstore.png") no-repeat center;
+        background: url("../images/Download buttons/appstore.png") no-repeat center;
         background-size: cover;
       }
       .download__buttons--android {
@@ -1107,7 +1107,7 @@ h2 {
         @media all and (max-width: 650px) {
           margin: 0 10px;
         }
-        background: url("../images/google play.png") no-repeat center;
+        background: url("../images/Download buttons/google play.png") no-repeat center;
         background-size: cover;
       }
     }
@@ -1245,31 +1245,31 @@ h2 {
           justify-content: space-around;
           font-size: 0;
           a {
-              background: url("../images/facebook2.png") no-repeat center;
+              background: url("../images/Social/facebook2.png") no-repeat center;
               display: inline-block;
               height: 26px;
               width: 12px;
               transition: 200ms;
               &:hover {
-                background: url("../images/facebook.png") no-repeat center;
+                background: url("../images/Social/facebook.png") no-repeat center;
                 transition: 200ms;
               }
               &.header__social--instagram {
-                background: url("../images/instagram2.png") no-repeat center;
+                background: url("../images/Social/instagram2.png") no-repeat center;
                 width: 26px;
                 transition: 200ms;
                 &:hover {
-                  background: url("../images/instagram.png") no-repeat center;
+                  background: url("../images/Social/instagram.png") no-repeat center;
                   transition: 200ms;
                 }
               }
               &.header__social--tweeter {
-                background: url("../images/twitter2.png") no-repeat center;
+                background: url("../images/Social/twitter2.png") no-repeat center;
                 height: 21px;
                 width: 27px;
                 transition: 200ms;
                 &:hover {
-                  background: url("../images/twitter.png") no-repeat center;
+                  background: url("../images/Social/twitter.png") no-repeat center;
                   transition: 200ms;
                 }
               }
