--- a/scss/style.scss
+++ b/scss/style.scss
@@ -311,31 +311,32 @@ h2 {
         li {
           font-size: 0;
           a {
-              background: url("../images/social/facebook.png") no-repeat center;
+              background: url("../images/Social/facebook.png") no-repeat center;
               display: inline-block;
               height: 26px;
               width: 12px;
               transition: 200ms;
+              padding: 5px 10px;
               &:hover {
-                background: url("../images/social/facebook2.png") no-repeat center;
+                background: url("../images/Social/facebook2.png") no-repeat center;
                 transition: 200ms;
               }
               &.header__social--instagram {
-                background: url("../images/social/instagram.png") no-repeat center;
+                background: url("../images/Social/instagram.png") no-repeat center;
                 width: 26px;
                 transition: 200ms;
                 &:hover {
-                  background: url("../images/social/instagram2.png") no-repeat center;
+                  background: url("../images/Social/instagram2.png") no-repeat center;
                   transition: 200ms;
                 }
               }
               &.header__social--tweeter {
-                background: url("../images/social/twitter.png") no-repeat center;
+                background: url("../images/Social/twitter.png") no-repeat center;
                 height: 21px;
                 width: 27px;
                 transition: 200ms;
                 &:hover {
-                  background: url("../images/social/twitter2.png") no-repeat center;
+                  background: url("../images/Social/twitter2.png") no-repeat center;
                   transition: 200ms;
                 }
               }
