--- a/css/style.css
+++ b/css/style.css
@@ -115,8 +115,8 @@ h2 {
   .btn__menu:hover .btn__menu__line.btn__menu__line--sixth {
     width: 100%;
     transition-delay: 480ms; }
-  .btn__menu:focus {
-    border: 2px solid black; }
+  .btn__menu:focus .btn__menu__line {
+    background: #000; }
 
 .hamburgerMenu {
   display: none;
